Added ability to set a coinbase script in generated coinbase transactions.